--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pyright = "^0.0.13"
 isort = "^5.10.1"
 black = "^21.12b0"
 
+[tool.poetry.group.dev.dependencies]
+textual-dev = "^1.2.1"
+
 [tool.black]
 line-length = 120
 
